<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tw.edu.ntut.csie.app04_105590051.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/stu1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/s1" />

        <Button
            android:id="@+id/stu2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/s2" />

        <Button
            android:id="@+id/stu4"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/s3" />

        <Button
            android:id="@+id/stu5"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/s4" />

        <Button
            android:id="@+id/stu6"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/s5" />

        <Button
            android:id="@+id/stu7"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/s6" />

        <Button
            android:id="@+id/stu8"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/s7" />

        <Button
            android:id="@+id/stu9"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/s8" />

        <Button
            android:id="@+id/stu3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/s9" />

        <Button
            android:id="@+id/stu10"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/s10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/absentee" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clr" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout
   >
